cse/cil/src/frontc/cparser.output
   0  $accept : %entry% $end

   1  interpret : file EOF

   2  file : globals

   3  globals :
   4          | global globals
   5          | SEMICOLON globals

   6  location :

   7  global : declaration
   8         | function_def
   9         | ASM LPAREN string_constant RPAREN SEMICOLON
  10         | PRAGMA attr
  11         | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list SEMICOLON
  12         | IDENT LPAREN RPAREN SEMICOLON
  13         | AT_TRANSFORM LBRACE global RBRACE IDENT LBRACE globals RBRACE
  14         | AT_TRANSFORMEXPR LBRACE expression RBRACE IDENT LBRACE expression RBRACE
  15         | location error SEMICOLON

  16  id_or_typename : IDENT
  17                 | NAMED_TYPE
  18                 | AT_NAME LPAREN IDENT RPAREN

  19  maybecomma :
  20             | COMMA

  21  expression : constant
  22             | IDENT
  23             | SIZEOF expression
  24             | SIZEOF LPAREN type_name RPAREN
  25             | ALIGNOF expression
  26             | ALIGNOF LPAREN type_name RPAREN
  27             | PLUS expression
  28             | MINUS expression
  29             | STAR expression
  30             | AND expression
  31             | EXCLAM expression
  32             | TILDE expression
  33             | PLUS_PLUS expression
  34             | expression PLUS_PLUS
  35             | MINUS_MINUS expression
  36             | expression MINUS_MINUS
  37             | expression ARROW id_or_typename
  38             | expression DOT id_or_typename
  39             | LPAREN block RPAREN
  40             | paren_comma_expression
  41             | expression LPAREN arguments RPAREN
  42             | BUILTIN_VA_ARG LPAREN expression COMMA type_name RPAREN
  43             | expression bracket_comma_expression
  44             | expression QUEST opt_expression COLON expression
  45             | expression PLUS expression
  46             | expression MINUS expression
  47             | expression STAR expression
  48             | expression SLASH expression
  49             | expression PERCENT expression
  50             | expression AND_AND expression
  51             | expression PIPE_PIPE expression
  52             | expression AND expression
  53             | expression PIPE expression
  54             | expression CIRC expression
  55             | expression EQ_EQ expression
  56             | expression EXCLAM_EQ expression
  57             | expression INF expression
  58             | expression SUP expression
  59             | expression INF_EQ expression
  60             | expression SUP_EQ expression
  61             | expression INF_INF expression
  62             | expression SUP_SUP expression
  63             | expression EQ expression
  64             | expression PLUS_EQ expression
  65             | expression MINUS_EQ expression
  66             | expression STAR_EQ expression
  67             | expression SLASH_EQ expression
  68             | expression PERCENT_EQ expression
  69             | expression AND_EQ expression
  70             | expression PIPE_EQ expression
  71             | expression CIRC_EQ expression
  72             | expression INF_INF_EQ expression
  73             | expression SUP_SUP_EQ expression
  74             | LPAREN type_name RPAREN expression
  75             | LPAREN type_name RPAREN LBRACE initializer_list_opt RBRACE
  76             | AND_AND IDENT
  77             | AT_EXPR LPAREN IDENT RPAREN

  78  constant : CST_INT
  79           | CST_FLOAT
  80           | CST_CHAR
  81           | CST_WCHAR
  82           | string_constant
  83           | wstring_list

  84  string_constant : string_list

  85  one_string_constant : CST_STRING

  86  string_list : one_string
  87              | string_list one_string

  88  wstring_list : CST_WSTRING
  89               | wstring_list one_string
  90               | wstring_list CST_WSTRING

  91  one_string : CST_STRING
  92             | FUNCTION__
  93             | PRETTY_FUNCTION__

  94  init_expression : expression
  95                  | LBRACE initializer_list_opt RBRACE

  96  initializer_list : initializer
  97                   | initializer COMMA initializer_list_opt

  98  initializer_list_opt :
  99                       | initializer_list

 100  initializer : init_designators eq_opt init_expression
 101              | gcc_init_designators init_expression
 102              | init_expression

 103  eq_opt : EQ
 104         |

 105  init_designators : DOT id_or_typename init_designators_opt
 106                   | LBRACKET expression RBRACKET init_designators_opt
 107                   | LBRACKET expression ELLIPSIS expression RBRACKET

 108  init_designators_opt :
 109                       | init_designators

 110  gcc_init_designators : id_or_typename COLON

 111  arguments :
 112            | comma_expression

 113  opt_expression :
 114                 | comma_expression

 115  comma_expression : expression
 116                   | expression COMMA comma_expression
 117                   | error COMMA comma_expression

 118  comma_expression_opt :
 119                       | comma_expression

 120  paren_comma_expression : LPAREN comma_expression RPAREN
 121                         | LPAREN error RPAREN

 122  bracket_comma_expression : LBRACKET comma_expression RBRACKET
 123                           | LBRACKET error RBRACKET

 124  block : block_begin local_labels block_attrs block_element_list RBRACE
 125        | error location RBRACE

 126  block_begin : LBRACE

 127  block_attrs :
 128              | BLOCKATTRIBUTE paren_attr_list_ne

 129  block_element_list :
 130                     | declaration block_element_list
 131                     | statement block_element_list
 132                     | IDENT COLON

 133  local_labels :
 134               | LABEL__ local_label_names SEMICOLON local_labels

 135  local_label_names : IDENT
 136                    | IDENT COMMA local_label_names

 137  statement : SEMICOLON
 138            | comma_expression SEMICOLON
 139            | block
 140            | IF paren_comma_expression statement
 141            | IF paren_comma_expression statement ELSE statement
 142            | SWITCH paren_comma_expression statement
 143            | WHILE paren_comma_expression statement
 144            | DO statement WHILE paren_comma_expression SEMICOLON
 145            | FOR LPAREN for_clause opt_expression SEMICOLON opt_expression RPAREN statement
 146            | IDENT COLON statement
 147            | CASE expression COLON
 148            | CASE expression ELLIPSIS expression COLON
 149            | DEFAULT COLON
 150            | RETURN SEMICOLON
 151            | RETURN comma_expression SEMICOLON
 152            | BREAK SEMICOLON
 153            | CONTINUE SEMICOLON
 154            | GOTO IDENT SEMICOLON
 155            | GOTO STAR comma_expression SEMICOLON
 156            | ASM asmattr LPAREN asmtemplate asmoutputs RPAREN SEMICOLON
 157            | MSASM
 158            | error location SEMICOLON

 159  for_clause : opt_expression SEMICOLON
 160             | declaration

 161  declaration : decl_spec_list init_declarator_list SEMICOLON
 162              | decl_spec_list SEMICOLON

 163  init_declarator_list : init_declarator
 164                       | init_declarator COMMA init_declarator_list

 165  init_declarator : declarator
 166                  | declarator EQ init_expression

 167  decl_spec_list : TYPEDEF decl_spec_list_opt
 168                 | EXTERN decl_spec_list_opt
 169                 | STATIC decl_spec_list_opt
 170                 | AUTO decl_spec_list_opt
 171                 | REGISTER decl_spec_list_opt
 172                 | type_spec decl_spec_list_opt_no_named
 173                 | INLINE decl_spec_list_opt
 174                 | cvspec decl_spec_list_opt
 175                 | attribute_nocv decl_spec_list_opt
 176                 | AT_SPECIFIER LPAREN IDENT RPAREN

 177  decl_spec_list_opt :
 178                     | decl_spec_list

 179  decl_spec_list_opt_no_named :
 180                              | decl_spec_list

 181  type_spec : VOID
 182            | CHAR
 183            | SHORT
 184            | INT
 185            | LONG
 186            | INT64
 187            | FLOAT
 188            | DOUBLE
 189            | SIGNED
 190            | UNSIGNED
 191            | STRUCT id_or_typename
 192            | STRUCT id_or_typename LBRACE struct_decl_list RBRACE
 193            | STRUCT LBRACE struct_decl_list RBRACE
 194            | STRUCT just_attributes id_or_typename LBRACE struct_decl_list RBRACE
 195            | STRUCT just_attributes LBRACE struct_decl_list RBRACE
 196            | UNION id_or_typename
 197            | UNION id_or_typename LBRACE struct_decl_list RBRACE
 198            | UNION LBRACE struct_decl_list RBRACE
 199            | UNION just_attributes id_or_typename LBRACE struct_decl_list RBRACE
 200            | UNION just_attributes LBRACE struct_decl_list RBRACE
 201            | ENUM id_or_typename
 202            | ENUM id_or_typename LBRACE enum_list maybecomma RBRACE
 203            | ENUM LBRACE enum_list maybecomma RBRACE
 204            | ENUM just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE
 205            | ENUM just_attributes LBRACE enum_list maybecomma RBRACE
 206            | NAMED_TYPE
 207            | TYPEOF LPAREN expression RPAREN
 208            | TYPEOF LPAREN type_name RPAREN

 209  struct_decl_list :
 210                   | decl_spec_list SEMICOLON struct_decl_list
 211                   | decl_spec_list field_decl_list SEMICOLON struct_decl_list
 212                   | error SEMICOLON struct_decl_list

 213  field_decl_list : field_decl
 214                  | field_decl COMMA field_decl_list

 215  field_decl : declarator
 216             | declarator COLON expression
 217             | COLON expression

 218  enum_list : enumerator
 219            | enum_list COMMA enumerator
 220            | enum_list COMMA error

 221  enumerator : IDENT
 222             | IDENT EQ expression

 223  declarator : pointer_opt direct_decl attributes_with_asm

 224  direct_decl : id_or_typename
 225              | LPAREN attributes declarator RPAREN
 226              | direct_decl LBRACKET attributes comma_expression_opt RBRACKET
 227              | direct_decl LBRACKET attributes error RBRACKET
 228              | direct_decl parameter_list_startscope rest_par_list RPAREN

 229  parameter_list_startscope : LPAREN

 230  rest_par_list :
 231                | parameter_decl rest_par_list1

 232  rest_par_list1 :
 233                 | COMMA ELLIPSIS
 234                 | COMMA parameter_decl rest_par_list1

 235  parameter_decl : decl_spec_list declarator
 236                 | decl_spec_list abstract_decl
 237                 | decl_spec_list
 238                 | LPAREN parameter_decl RPAREN

 239  old_proto_decl : pointer_opt direct_old_proto_decl

 240  direct_old_proto_decl : direct_decl LPAREN old_parameter_list_ne RPAREN old_pardef_list
 241                        | direct_decl LPAREN RPAREN

 242  old_parameter_list_ne : IDENT
 243                        | IDENT COMMA old_parameter_list_ne

 244  old_pardef_list :
 245                  | decl_spec_list old_pardef SEMICOLON ELLIPSIS
 246                  | decl_spec_list old_pardef SEMICOLON old_pardef_list

 247  old_pardef : declarator
 248             | declarator COMMA old_pardef
 249             | error

 250  pointer : STAR attributes pointer_opt

 251  pointer_opt :
 252              | pointer

 253  type_name : decl_spec_list abstract_decl
 254            | decl_spec_list

 255  abstract_decl : pointer_opt abs_direct_decl attributes
 256                | pointer

 257  abs_direct_decl : LPAREN attributes abstract_decl RPAREN
 258                  | LPAREN error RPAREN
 259                  | abs_direct_decl_opt LBRACKET comma_expression_opt RBRACKET
 260                  | abs_direct_decl parameter_list_startscope rest_par_list RPAREN

 261  abs_direct_decl_opt : abs_direct_decl
 262                      |

 263  function_def : function_def_start block

 264  function_def_start : decl_spec_list declarator
 265                     | decl_spec_list old_proto_decl
 266                     | IDENT parameter_list_startscope rest_par_list RPAREN
 267                     | IDENT LPAREN old_parameter_list_ne RPAREN old_pardef_list
 268                     | IDENT LPAREN RPAREN

 269  cvspec : CONST
 270         | VOLATILE
 271         | RESTRICT

 272  attributes :
 273             | attribute attributes

 274  attributes_with_asm :
 275                      | attribute attributes_with_asm
 276                      | ASM LPAREN string_constant RPAREN attributes

 277  attribute_nocv : ATTRIBUTE LPAREN paren_attr_list_ne RPAREN
 278                 | DECLSPEC paren_attr_list_ne
 279                 | MSATTR
 280                 | THREAD

 281  attribute : attribute_nocv
 282            | CONST
 283            | RESTRICT
 284            | VOLATILE

 285  just_attribute : ATTRIBUTE LPAREN paren_attr_list_ne RPAREN

 286  just_attributes : just_attribute
 287                  | just_attribute just_attributes

 288  attr : id_or_typename
 289       | IDENT COLON CST_INT
 290       | DEFAULT COLON CST_INT
 291       | IDENT LPAREN RPAREN
 292       | IDENT paren_attr_list_ne
 293       | CST_INT
 294       | string_constant
 295       | CONST
 296       | SIZEOF expression
 297       | SIZEOF LPAREN type_name RPAREN
 298       | ALIGNOF expression
 299       | ALIGNOF LPAREN type_name RPAREN
 300       | PLUS expression
 301       | MINUS expression
 302       | STAR expression
 303       | AND expression
 304       | EXCLAM expression
 305       | TILDE expression
 306       | attr PLUS attr
 307       | attr MINUS attr
 308       | attr STAR expression
 309       | attr SLASH attr
 310       | attr PERCENT attr
 311       | attr AND_AND attr
 312       | attr PIPE_PIPE attr
 313       | attr AND attr
 314       | attr PIPE attr
 315       | attr CIRC attr
 316       | attr EQ_EQ attr
 317       | attr EXCLAM_EQ attr
 318       | attr INF attr
 319       | attr SUP attr
 320       | attr INF_EQ attr
 321       | attr SUP_EQ attr
 322       | attr INF_INF attr
 323       | attr SUP_SUP attr
 324       | attr ARROW id_or_typename
 325       | attr DOT id_or_typename
 326       | LPAREN attr RPAREN

 327  attr_list_ne : attr
 328               | attr COMMA attr_list_ne
 329               | error COMMA attr_list_ne

 330  paren_attr_list_ne : LPAREN attr_list_ne RPAREN
 331                     | LPAREN error RPAREN

 332  asmattr :
 333          | VOLATILE asmattr
 334          | CONST asmattr

 335  asmtemplate : one_string_constant
 336              | one_string_constant asmtemplate

 337  asmoutputs :
 338             | COLON asmoperands asminputs

 339  asmoperands :
 340              | asmoperandsne

 341  asmoperandsne : asmoperand
 342                | asmoperandsne COMMA asmoperand

 343  asmoperand : string_constant LPAREN expression RPAREN
 344             | string_constant LPAREN error RPAREN

 345  asminputs :
 346            | COLON asmoperands asmclobber

 347  asmclobber :
 348             | COLON asmcloberlst_ne

 349  asmcloberlst_ne : one_string_constant
 350                  | one_string_constant COMMA asmcloberlst_ne

 351  %entry% : '\001' interpret
 352          | '\002' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . interpret  (351)
	globals : .  (3)
	location : .  (6)

	IDENT  shift 4
	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	SEMICOLON  shift 28
	ATTRIBUTE  shift 29
	INLINE  shift 30
	ASM  shift 31
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	PRAGMA  shift 35
	AT_TRANSFORM  shift 36
	AT_TRANSFORMEXPR  shift 37
	AT_SPECIFIER  shift 38
	error  reduce 6
	EOF  reduce 3

	interpret  goto 39
	file  goto 40
	globals  goto 41
	global  goto 42
	decl_spec_list  goto 43
	type_spec  goto 44
	declaration  goto 45
	function_def  goto 46
	function_def_start  goto 47
	location  goto 48
	cvspec  goto 49
	attribute_nocv  goto 50


state 2
	%entry% : '\002' . file  (352)
	globals : .  (3)
	location : .  (6)

	IDENT  shift 4
	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	SEMICOLON  shift 28
	ATTRIBUTE  shift 29
	INLINE  shift 30
	ASM  shift 31
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	PRAGMA  shift 35
	AT_TRANSFORM  shift 36
	AT_TRANSFORMEXPR  shift 37
	AT_SPECIFIER  shift 38
	$end  reduce 3
	error  reduce 6

	file  goto 51
	globals  goto 41
	global  goto 42
	decl_spec_list  goto 43
	type_spec  goto 44
	declaration  goto 45
	function_def  goto 46
	function_def_start  goto 47
	location  goto 48
	cvspec  goto 49
	attribute_nocv  goto 50


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	global : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list SEMICOLON  (11)
	global : IDENT . LPAREN RPAREN SEMICOLON  (12)
	function_def_start : IDENT . parameter_list_startscope rest_par_list RPAREN  (266)
	function_def_start : IDENT . LPAREN old_parameter_list_ne RPAREN old_pardef_list  (267)
	function_def_start : IDENT . LPAREN RPAREN  (268)

	LPAREN  shift 52
	.  error

	parameter_list_startscope  goto 53


state 5
	type_spec : NAMED_TYPE .  (206)

	.  reduce 206


state 6
	type_spec : CHAR .  (182)

	.  reduce 182


state 7
	type_spec : INT .  (184)

	.  reduce 184


state 8
	type_spec : DOUBLE .  (188)

	.  reduce 188


state 9
	type_spec : FLOAT .  (187)

	.  reduce 187


state 10
	type_spec : VOID .  (181)

	.  reduce 181


state 11
	type_spec : INT64 .  (186)

	.  reduce 186


state 12
	type_spec : ENUM . id_or_typename  (201)
	type_spec : ENUM . id_or_typename LBRACE enum_list maybecomma RBRACE  (202)
	type_spec : ENUM . LBRACE enum_list maybecomma RBRACE  (203)
	type_spec : ENUM . just_attributes id_or_typename LBRACE enum_list maybecomma RBRACE  (204)
	type_spec : ENUM . just_attributes LBRACE enum_list maybecomma RBRACE  (205)

	IDENT  shift 54
	NAMED_TYPE  shift 55
	LBRACE  shift 56
	ATTRIBUTE  shift 57
	AT_NAME  shift 58
	.  error

	id_or_typename  goto 59
	just_attributes  goto 60
	just_attribute  goto 61


state 13
	type_spec : STRUCT . id_or_typename  (191)
	type_spec : STRUCT . id_or_typename LBRACE struct_decl_list RBRACE  (192)
	type_spec : STRUCT . LBRACE struct_decl_list RBRACE  (193)
	type_spec : STRUCT . just_attributes id_or_typename LBRACE struct_decl_list RBRACE  (194)
	type_spec : STRUCT . just_attributes LBRACE struct_decl_list RBRACE  (195)

	IDENT  shift 54
	NAMED_TYPE  shift 55
	LBRACE  shift 62
	ATTRIBUTE  shift 57
	AT_NAME  shift 58
	.  error

	id_or_typename  goto 63
	just_attributes  goto 64
	just_attribute  goto 61


state 14
	decl_spec_list : TYPEDEF . decl_spec_list_opt  (167)
	decl_spec_list_opt : .  (177)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 38
	error  reduce 177
	IDENT  reduce 177
	STAR  reduce 177
	RPAREN  reduce 177
	LPAREN  reduce 177
	LBRACKET  reduce 177
	COLON  reduce 177
	SEMICOLON  reduce 177
	COMMA  reduce 177
	AT_NAME  reduce 177

	decl_spec_list  goto 65
	type_spec  goto 44
	cvspec  goto 49
	decl_spec_list_opt  goto 66
	attribute_nocv  goto 50


state 15
	type_spec : UNION . id_or_typename  (196)
	type_spec : UNION . id_or_typename LBRACE struct_decl_list RBRACE  (197)
	type_spec : UNION . LBRACE struct_decl_list RBRACE  (198)
	type_spec : UNION . just_attributes id_or_typename LBRACE struct_decl_list RBRACE  (199)
	type_spec : UNION . just_attributes LBRACE struct_decl_list RBRACE  (200)

	IDENT  shift 54
	NAMED_TYPE  shift 55
	LBRACE  shift 67
	ATTRIBUTE  shift 57
	AT_NAME  shift 58
	.  error

	id_or_typename  goto 68
	just_attributes  goto 69
	just_attribute  goto 61


state 16
	type_spec : SIGNED .  (189)

	.  reduce 189


state 17
	type_spec : UNSIGNED .  (190)

	.  reduce 190


state 18
	type_spec : LONG .  (185)

	.  reduce 185


state 19
	type_spec : SHORT .  (183)

	.  reduce 183


state 20
	cvspec : VOLATILE .  (270)

	.  reduce 270


state 21
	decl_spec_list : EXTERN . decl_spec_list_opt  (168)
	decl_spec_list_opt : .  (177)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 38
	error  reduce 177
	IDENT  reduce 177
	STAR  reduce 177
	RPAREN  reduce 177
	LPAREN  reduce 177
	LBRACKET  reduce 177
	COLON  reduce 177
	SEMICOLON  reduce 177
	COMMA  reduce 177
	AT_NAME  reduce 177

	decl_spec_list  goto 65
	type_spec  goto 44
	cvspec  goto 49
	decl_spec_list_opt  goto 70
	attribute_nocv  goto 50


state 22
	decl_spec_list : STATIC . decl_spec_list_opt  (169)
	decl_spec_list_opt : .  (177)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 38
	error  reduce 177
	IDENT  reduce 177
	STAR  reduce 177
	RPAREN  reduce 177
	LPAREN  reduce 177
	LBRACKET  reduce 177
	COLON  reduce 177
	SEMICOLON  reduce 177
	COMMA  reduce 177
	AT_NAME  reduce 177

	decl_spec_list  goto 65
	type_spec  goto 44
	cvspec  goto 49
	decl_spec_list_opt  goto 71
	attribute_nocv  goto 50


state 23
	cvspec : CONST .  (269)

	.  reduce 269


state 24
	cvspec : RESTRICT .  (271)

	.  reduce 271


state 25
	decl_spec_list : AUTO . decl_spec_list_opt  (170)
	decl_spec_list_opt : .  (177)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 38
	error  reduce 177
	IDENT  reduce 177
	STAR  reduce 177
	RPAREN  reduce 177
	LPAREN  reduce 177
	LBRACKET  reduce 177
	COLON  reduce 177
	SEMICOLON  reduce 177
	COMMA  reduce 177
	AT_NAME  reduce 177

	decl_spec_list  goto 65
	type_spec  goto 44
	cvspec  goto 49
	decl_spec_list_opt  goto 72
	attribute_nocv  goto 50


state 26
	decl_spec_list : REGISTER . decl_spec_list_opt  (171)
	decl_spec_list_opt : .  (177)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 38
	error  reduce 177
	IDENT  reduce 177
	STAR  reduce 177
	RPAREN  reduce 177
	LPAREN  reduce 177
	LBRACKET  reduce 177
	COLON  reduce 177
	SEMICOLON  reduce 177
	COMMA  reduce 177
	AT_NAME  reduce 177

	decl_spec_list  goto 65
	type_spec  goto 44
	cvspec  goto 49
	decl_spec_list_opt  goto 73
	attribute_nocv  goto 50


state 27
	attribute_nocv : THREAD .  (280)

	.  reduce 280


state 28
	globals : SEMICOLON . globals  (5)
	globals : .  (3)
	location : .  (6)

	IDENT  shift 4
	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	SEMICOLON  shift 28
	ATTRIBUTE  shift 29
	INLINE  shift 30
	ASM  shift 31
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	PRAGMA  shift 35
	AT_TRANSFORM  shift 36
	AT_TRANSFORMEXPR  shift 37
	AT_SPECIFIER  shift 38
	$end  reduce 3
	error  reduce 6
	EOF  reduce 3
	RBRACE  reduce 3

	globals  goto 74
	global  goto 42
	decl_spec_list  goto 43
	type_spec  goto 44
	declaration  goto 45
	function_def  goto 46
	function_def_start  goto 47
	location  goto 48
	cvspec  goto 49
	attribute_nocv  goto 50


state 29
	attribute_nocv : ATTRIBUTE . LPAREN paren_attr_list_ne RPAREN  (277)

	LPAREN  shift 75
	.  error


state 30
	decl_spec_list : INLINE . decl_spec_list_opt  (173)
	decl_spec_list_opt : .  (177)

	NAMED_TYPE  shift 5
	CHAR  shift 6
	INT  shift 7
	DOUBLE  shift 8
	FLOAT  shift 9
	VOID  shift 10
	INT64  shift 11
	ENUM  shift 12
	STRUCT  shift 13
	TYPEDEF  shift 14
	UNION  shift 15
	SIGNED  shift 16
	UNSIGNED  shift 17
	LONG  shift 18
	SHORT  shift 19
	VOLATILE  shift 20
	EXTERN  shift 21
	STATIC  shift 22
	CONST  shift 23
	RESTRICT  shift 24
	AUTO  shift 25
	REGISTER  shift 26
	THREAD  shift 27
	ATTRIBUTE  shift 29
	INLINE  shift 30
	TYPEOF  shift 32
	DECLSPEC  shift 33
	MSATTR  shift 34
	AT_SPECIFIER  shift 38
	error  reduce 177
	IDENT  reduce 177
	STAR  reduce 177
	RPAREN  reduce 177
	LPAREN  reduce 177
	LBRACKET  reduce 177
	COLON  reduce 177
	SEMICOLON  reduce 177
	COMMA  reduce 177
	AT_NAME  reduce 177

	decl_spec_list  goto 65
	type_spec  goto 44
	cvspec  goto 49
	decl_spec_list_opt  goto 76
	attribute_nocv  goto 50


state 31
	global : ASM . LPAREN string_constant RPAREN SEMICOLON  (9)

	LPAREN  shift 77
	.  error

